# nimittam

./: .gitignore  BUILD_SUMMARY.md  COMPLETE_DATASTORE_FIX_SOLUTION.md  DATASTORE_FIX_IMPLEMENTATION.md  LICENSE  README.md  package-lock.json
.github/workflows/: chaos-tests.yml  ci.yml
Android/: .gitignore
Android/src/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
Android/src/app/: .gitignore  build.gradle.kts  proguard-rules.pro
Android/src/app/mlc4j/: build.gradle
Android/src/app/mlc4j/src/main/assets/: mlc-app-config.json
Android/src/app/mlc4j/src/main/java/ai/mlc/mlcllm/: MLCEngine.kt  OpenAIProtocol.kt
Android/src/app/src/main/: AndroidManifest.xml
Android/src/app/src/main/assets/Qwen2.5-0.5B-Instruct-q4f16_1-MLC/: README.md  ndarray-cache.json
Android/src/app/src/main/assets/qwen2.5-0.5b/: mlc-chat-config.json
Android/src/app/src/main/cpp/: CMakeLists.txt  mlc_llm_jni.cpp
Android/src/app/src/main/java/com/google/ai/edge/gallery/: GalleryApplication.kt  GalleryLifecycleProvider.kt  MainActivity.kt  SettingsSerializer.kt  UserDataSerializer.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/common/: BatteryOptimizer.kt  CrashHandler.kt  HapticFeedbackManager.kt  MemoryManager.kt  OfflineMode.kt  OnboardingPreferences.kt  SecureStorage.kt  ThermalManager.kt  Types.kt  Utils.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/data/: Categories.kt  Config.kt  ConfigValue.kt  Consts.kt  DataStoreRepository.kt  Tasks.kt  Types.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/di/: AppModule.kt  DatabaseModule.kt  LlmModule.kt  OptimizationModule.kt
Android/src/app/src/main/java/com/google/ai/edge/gallery/llm/: EngineInitializer.kt  EngineLifecycleManager.kt  EngineState.kt  EngineStateManager.kt  HardwareDetector.kt  LlmEngine.kt  LlmExceptions.kt  ModelAssetExtractor.kt  ModelManager.kt  PromptQueue.kt  README.md
Android/src/app/src/main/proto/: settings.proto
Android/src/app/src/main/res/values/: strings.xml  themes.xml
Android/src/app/src/main/res/xml/: data_extraction_rules.xml
Android/src/gradle/: libs.versions.toml
Android/src/gradle/wrapper/: gradle-wrapper.properties
docs/: comprehensive-analysis-report.md  index.md
docs/analysis/: dynamic-analysis.md  static-analysis.md
docs/architecture/: components.md  overview.md  patterns.md
docs/decisions/: ADR-001-on-device-inference.md  ADR-002-mlc-llm-framework.md  ADR-003-reactive-state-management.md
docs/references/: bibliography.md  glossary.md
docs/specifications/: data-models.md  interfaces.md  traceability.md
docs/theory/: complexity.md  formal-methods.md
docs/visualizations/: diagrams.md  interactive.md
(+48 files in other folders)
